# eth-utils

./: .gitignore  .goreleaser.yaml  CHANGELOG.md  Makefile  README.md  RELEASE_NOTES_v1.0.0.md
.github/workflows/: eth-deposit-gen.yml  eth-deposit-tx-e2e.yml  release.yml
docs/: architecture.md  prd.md  project-plan.md
docs/issues/: phase-1.md  phase-2.md  phase-3.md  phase-4.md  summary.md
docs/research/: bls-ssz-libraries.md  deposit-spec.md  keystore-decoding.md
docs/validation/: audit-v1.md  hoodi-e2e.md  mainnet-golden.md  release-strategy.md  v1.0.0-release-checklist.md
go/: Makefile  go.mod  go.sum  go.work
go/cmd/eth-deposit-gen/: Makefile  README.md  go.mod  go.sum  main.go  main_test.go
go/cmd/eth-deposit-tx/: README.md  config.go  config_test.go  deposit_e2e_test.go  exit.go  exit_test.go  golden_test.go  main.go  main_test.go  run.go  run_test.go  send.go  send_test.go  sign.go  sign_test.go  signed_golden_test.go
go/docs/deposit-tx/: architecture.md  prd.md  project-plan.md
go/internal/bls/: bls.go  bls_test.go
go/internal/cli/: cli.go  cli_fuzz_test.go  cli_test.go
go/internal/deposit/: deposit.go  deposit_test.go  json.go  json_test.go
go/internal/keystore/: keystore_test.go  scandir.go  (+1 more)
go/scripts/: e2e-testnet.sh
python/: pyproject.toml
rust/: Cargo.toml
scripts/: validate-readme-examples.sh
scripts/devnet/: 00-setup-environment.sh  01-generate-jwt-secret.sh  02-generate-genesis.sh  03-generate-validator-keys.sh  04-start-execution-layer.sh  05-start-consensus-layer.sh  06-check-health.sh  07-stop-devnet.sh  08-cleanup.sh
(+93 files in other folders)
