[project]
name = "eth-utils-python"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
# Add CLI entrypoints here: mytool = "tools.mytool.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*", "lib*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
